// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarketingPreference component renders correctly and displays marketing information 1`] = `
<div
  css={
    Array [
      Object {
        "fontFamily": "\\"Guardian Text Sans Web\\", \\"Helvetica Neue\\", Helvetica, Arial, \\"Lucida Grande\\", sans-serif",
        "fontSize": "0.875rem",
      },
      Object {
        "lineHeight": "1.333",
        "marginTop": "0.75rem",
        "paddingLeft": "1.48214rem",
        "position": "relative",
      },
    ]
  }
  onClick={[Function]}
>
  <input
    css={
      Object {
        "left": 0,
        "position": "absolute",
      }
    }
    type="checkbox"
  />
  <p
    css={
      Array [
        Object {
          "fontFamily": "\\"Guardian Text Sans Web\\", \\"Helvetica Neue\\", Helvetica, Arial, \\"Lucida Grande\\", sans-serif",
          "fontSize": "0.875rem",
        },
        Object {
          "cursor": "pointer",
          "fontFamily": "\\"Guardian Text Sans Web\\", \\"Helvetica Neue\\", Helvetica, Arial, \\"Lucida Grande\\", sans-serif",
          "fontSize": "0.875rem",
          "fontWeight": "bold",
          "lineHeight": "1.375rem",
          "margin": "-0.0625rem 0 0",
        },
      ]
    }
  >
    Test title
  </p>
  <p
    css={
      Object {
        "margin": "0.17857rem 0 0 0",
      }
    }
  >
    Test description
  </p>
  <p
    css={
      Object {
        "fontSize": "0.75rem",
        "lineHeight": "1rem",
        "margin": "0.1875rem 0 0 0",
        "opacity": 0.75,
      }
    }
  >
    <span
      css={
        Object {
          "display": "inline-block",
          "marginRight": "0.5rem",
          "verticalAlign": "middle",
        }
      }
    >
      <svg
        css={
          Object {
            "fill": "#dcdcdc",
          }
        }
        height="11"
        viewBox="0 0 11 11"
        width="11"
      >
        <path
          d="M5.4 0C2.4 0 0 2.4 0 5.4s2.4 5.4 5.4 5.4 5.4-2.4 5.4-5.4S8.4 0 5.4 0zm3 6.8H4.7V1.7h.7L6 5.4l2.4.6v.8z"
        />
      </svg>
    </span>
    Test frequency
  </p>
</div>
`;

exports[`MarketingPreference component will omit the frequency information if it is not supplied 1`] = `
<div
  css={
    Array [
      Object {
        "fontFamily": "\\"Guardian Text Sans Web\\", \\"Helvetica Neue\\", Helvetica, Arial, \\"Lucida Grande\\", sans-serif",
        "fontSize": "0.875rem",
      },
      Object {
        "lineHeight": "1.333",
        "marginTop": "0.75rem",
        "paddingLeft": "1.48214rem",
        "position": "relative",
      },
    ]
  }
  onClick={[Function]}
>
  <input
    checked={true}
    css={
      Object {
        "left": 0,
        "position": "absolute",
      }
    }
    type="checkbox"
  />
  <p
    css={
      Array [
        Object {
          "fontFamily": "\\"Guardian Text Sans Web\\", \\"Helvetica Neue\\", Helvetica, Arial, \\"Lucida Grande\\", sans-serif",
          "fontSize": "0.875rem",
        },
        Object {
          "cursor": "pointer",
          "fontFamily": "\\"Guardian Text Sans Web\\", \\"Helvetica Neue\\", Helvetica, Arial, \\"Lucida Grande\\", sans-serif",
          "fontSize": "0.875rem",
          "fontWeight": "bold",
          "lineHeight": "1.375rem",
          "margin": "-0.0625rem 0 0",
        },
      ]
    }
  >
    Test title
  </p>
  <p
    css={
      Object {
        "margin": "0.17857rem 0 0 0",
      }
    }
  >
    Test description
  </p>
</div>
`;

exports[`MarketingPreference component will select the checkbox when the selected prop is passed 1`] = `
<div
  css={
    Array [
      Object {
        "fontFamily": "\\"Guardian Text Sans Web\\", \\"Helvetica Neue\\", Helvetica, Arial, \\"Lucida Grande\\", sans-serif",
        "fontSize": "0.875rem",
      },
      Object {
        "lineHeight": "1.333",
        "marginTop": "0.75rem",
        "paddingLeft": "1.48214rem",
        "position": "relative",
      },
    ]
  }
  onClick={[Function]}
>
  <input
    checked={true}
    css={
      Object {
        "left": 0,
        "position": "absolute",
      }
    }
    type="checkbox"
  />
  <p
    css={
      Array [
        Object {
          "fontFamily": "\\"Guardian Text Sans Web\\", \\"Helvetica Neue\\", Helvetica, Arial, \\"Lucida Grande\\", sans-serif",
          "fontSize": "0.875rem",
        },
        Object {
          "cursor": "pointer",
          "fontFamily": "\\"Guardian Text Sans Web\\", \\"Helvetica Neue\\", Helvetica, Arial, \\"Lucida Grande\\", sans-serif",
          "fontSize": "0.875rem",
          "fontWeight": "bold",
          "lineHeight": "1.375rem",
          "margin": "-0.0625rem 0 0",
        },
      ]
    }
  >
    Test title
  </p>
  <p
    css={
      Object {
        "margin": "0.17857rem 0 0 0",
      }
    }
  >
    Test description
  </p>
  <p
    css={
      Object {
        "fontSize": "0.75rem",
        "lineHeight": "1rem",
        "margin": "0.1875rem 0 0 0",
        "opacity": 0.75,
      }
    }
  >
    <span
      css={
        Object {
          "display": "inline-block",
          "marginRight": "0.5rem",
          "verticalAlign": "middle",
        }
      }
    >
      <svg
        css={
          Object {
            "fill": "#dcdcdc",
          }
        }
        height="11"
        viewBox="0 0 11 11"
        width="11"
      >
        <path
          d="M5.4 0C2.4 0 0 2.4 0 5.4s2.4 5.4 5.4 5.4 5.4-2.4 5.4-5.4S8.4 0 5.4 0zm3 6.8H4.7V1.7h.7L6 5.4l2.4.6v.8z"
        />
      </svg>
    </span>
    Test frequency
  </p>
</div>
`;
